@@ -1,5 +1,10 @@
 2011-01-26 Philipp Klaus Krause <pkk AT spth.de>
 
+	* src/z80/ralloc2.cc:
+	  Improved handling of HL.
+
+2011-01-26 Philipp Klaus Krause <pkk AT spth.de>
+
 	* src/z80/ralloc2.cc,
 	  src/z80/peeph-z80.def:
 	  Improved handling of A and HL.
